infra/postgres/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: postgres
  labels:
    app.kubernetes.io/component: primary
spec:
  selector:
    app.kubernetes.io/component: primary
  ports:
    - name: db
      port: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-headless
  namespace: postgres
  labels:
    app.kubernetes.io/component: primary
  annotations:
    # Use this annotation in addition to the actual publishNotReadyAddresses
    # field below because the annotation will stop being respected soon but the
    # field is broken in some versions of Kubernetes:
    # https://github.com/kubernetes/kubernetes/issues/58662
    service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
spec:
  selector:
    app.kubernetes.io/component: primary
  type: ClusterIP
  clusterIP: None
  # We want all pods in the StatefulSet to have their addresses published for
  # the sake of the other Postgresql pods even before they're ready, since they
  # have to be able to talk to each other in order to become ready.
  publishNotReadyAddresses: true
  ports:
    - name: db
      port: 5432
      targetPort: db
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: postgres
spec:
  serviceName: postgres
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: postgres
      app.kubernetes.io/component: primary
  template:
    metadata:
      namespace: postgres
      labels:
        app.kubernetes.io/name: postgres
        app.kubernetes.io/component: primary
    spec:
      containers:
        - name: postgres
          image: postgres:17.2-alpine3.20@sha256:b72cad4516669a77fb26ea6af00a2ae2502176e99c84c2a13a737ccc128c034c
          lifecycle:
            preStop:
              exec:
                # https://www.postgresql.org/docs/current/server-shutdown.html
                command:
                  - "/bin/sh"
                  - "-c"
                  - "pg_ctl stop -D /var/lib/postgresql/data -w -t 20 -m fast"
          livenessProbe:
            exec:
              command:
                - "/bin/sh"
                - "-c"
                - "pg_isready -h localhost -p 5432 -U postgres"
          readinessProbe:
            exec:
              command:
                - "/bin/sh"
                - "-c"
                - "pg_isready -h localhost -p 5432 -U postgres"
          ports:
            - containerPort: 5432
              name: postgres
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
          resources:
            limits:
              memory: "500Mi"
              cpu: "500m"
            requests:
              cpu: "50m"
              memory: "100Mi"
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: postgres-pvc
      securityContext:
        runAsUser: 70
        runAsGroup: 70
