infra/postgres/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: postgres
  namespace: postgres
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - db
  routes:
    - match: "HostSNI(`*`)"
      services:
        - name: postgres
          port: db
